second attempt to fix images issue

--- a/odin-recipes/recipes/shrimp-stir-fry.html
+++ b/odin-recipes/recipes/shrimp-stir-fry.html
@@ -10,7 +10,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Shrimp Stir Fry</h1>
-    <img src="images/ALR-231681-shrimp-stir-fry-VAT-4x3-2-a15b87781ad0438c9d1f90769e734cb4.webp" alt="Shrimp plate"
+    <img src="./images/ALR-231681-shrimp-stir-fry-VAT-4x3-2-a15b87781ad0438c9d1f90769e734cb4.webp" alt="Shrimp plate"
         width="150" />
     <h2>Description</h2>
     <p>This shrimp stir fry recipe with frozen vegetables, frozen shrimp, and a simple stir fry sauce
