third attempt to fix the images issue

--- a/odin-recipes/recipes/braised-beef.html
+++ b/odin-recipes/recipes/braised-beef.html
@@ -10,7 +10,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1><strong>Braised Beef</strong></h1>
-    <img src="./images/ALR-8513083-braised-beef-VAT-4x3-82c7365bb36d4e77ba7368b33ca3f93e.webp" alt="Braised Beef"
+    <img src="../images/ALR-8513083-braised-beef-VAT-4x3-82c7365bb36d4e77ba7368b33ca3f93e.webp" alt="Braised Beef"
         width="150" />
     <h2>Description</h2>
     <p>An elevated version of homestyle pot roast, this braised beef is hearty and full of earthy richness.
